--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,15 +1,16 @@
 .footer__copyright {
-  padding: 45px 0 45px 0;
   font-size: 18px;
   line-height: 21.78px;
   color: #545454;
-  margin: 0;
+  padding: 0;
+  margin: 67px 0 60px 0;
   font-weight: 400;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 628px) {
   .footer__copyright {
     font-size: 14px;
     line-height: 16.94px;
+    margin: 48px 19px 36px 19px;
   }
 }
